# state-signals

./: README.md  pyproject.toml  requirements.txt  signal_tester.py  state_signals.py
.github/workflows/: python-app.yml
docs/: index.html
examples/: signal_tester.py
html/: state_signals.html
python-36/: setup.cfg  setup.py
python-latest/: setup.cfg  setup.py  state_signals.py
state_signals/: __init__.py
tests/: basic_test.py  func_test.py  unit_test.py
