[tool.poetry]
name = "state-signals"
version = "0.2.0"
description = "Package for easy management of state/event signal publishing, subscribing, and responding"

license = "GPL"

authors = [
    "Mustafa Eyceoz <meyceoz@redhat.com>"
]

readme = 'README.md'

repository = "https://github.com/distributed-system-analysis/state-signals"
homepage = "https://github.com/distributed-system-analysis/state-signals"

keywords = ['state', 'event', 'signal', 'publish', 'subscribe']

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.5"
dataclasses = "^0.8"
